refactoring: create pages/shared modules; rearrange components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,7 @@
     <vc-header></vc-header>
     <vc-breadcrumb></vc-breadcrumb>
     <main class="vc-main">
-        <vc-search></vc-search>
-        <vc-courses-list></vc-courses-list>
+        <vc-courses></vc-courses>
     </main>
     <vc-footer></vc-footer>
 </div>
