--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
     <vc-header></vc-header>
     <vc-breadcrumb></vc-breadcrumb>
     <main class="vc-main">
-        <vc-courses></vc-courses>
+        <vc-courses-page></vc-courses-page>
     </main>
     <vc-footer></vc-footer>
 </div>
