add components implementation; routing; styles

--- a/src/app/shared/components/breadcrumb/breadcrumb.component.html
+++ b/src/app/shared/components/breadcrumb/breadcrumb.component.html
@@ -1,1 +1,7 @@
-<p>Courses</p>
+<div class="vc-breadcrumbs">
+    <span
+        class="vc-breadcrumbs__item"
+        *ngFor="let breadcrumb of breadcrumbs">
+        {{breadcrumb}}
+    </span>
+</div>
