--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,7 +1,6 @@
 <header class="vc-header">
     <div class="vc-header__logo">
-        <img class="vc-header__img" src="assets/images/play-logo.png" alt="play logo">
-        <h3 class="vc-header__title">Video Course</h3>
+        <img class="vc-header__img" src="assets/images/ic-logo.svg" alt="play logo">
     </div>
     <vc-user></vc-user>
 </header>
