--- a/src/app/shared/components/user/user.component.html
+++ b/src/app/shared/components/user/user.component.html
@@ -1,4 +1,6 @@
 <div class="vc-user">
-    <img class="vc-user__icon" src="assets/images/user.png" alt="user icon">
-    <span>{{user.getFullName()}}</span>
+    <img class="vc-user__icon vc-user__icon--user" src="assets/images/ic-user.svg" alt="user icon">
+    <span class="vc-user__name">{{user.getFullName()}}</span>
+    <img class="vc-user__icon" src="assets/images/ic-exit.svg" alt="exit icon">
+    <button type="button" class="vc-user__exit">Log off</button>
 </div>
