--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,4 +2,18 @@
 
 $vc-white: #ffffff;
 $vc-black: #000000;
-$vc-dark-blue: #1f3346;
+$vc-grey: #f2f3f7;
+$vc-light-grey: #d9dbe3;
+$vc-dark-grey: #2c2f3c;
+$vc-dark-blue: #414452;
+$vc-silver: #c0c3ce;
+$vc-dark-silver: #868996;
+$vc-green: #9bc837;
+$vc-blue: #30b6dd;
+$vc-soft-blue: #577ce6;
+$vc-cloudy-blue: #b9bdce;
+$vc-red: #ff4e33;
+$vc-shadow: rgba(18, 21, 35, 0.08);
+
+// Fonts
+$vc-ff-source-sans: 'SourceSansPro';
