--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
     <vc-header></vc-header>
     <vc-breadcrumb></vc-breadcrumb>
     <main class="vc-main">
-        <vc-courses-page></vc-courses-page>
+        <router-outlet></router-outlet>
     </main>
     <vc-footer></vc-footer>
 </div>
