--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,3 +1,6 @@
+@import 'fonts';
+@import 'variables';
+
 * {
     margin: 0;
     padding: 0;
@@ -5,9 +8,11 @@
 }
 
 body {
-    font-family: sans-serif;
-    font-size: 12px;
+    font-family: $vc-ff-source-sans;
+    font-size: 14px;
+    line-height: 1.71;
     min-height: 100%;
+    background: $vc-grey;
 }
 
 html,
