--- a/src/app/pages/courses-page/courses-list/courses-list.component.html
+++ b/src/app/pages/courses-page/courses-list/courses-list.component.html
@@ -1,2 +1,2 @@
 <vc-course (deleteCourse)="deleteCourse($event)" *ngFor="let course of coursesList" [course]="course"></vc-course>
-<button (click)="loadMoreCourses()" class="vc-courses-list__more-button" type="button">Load more</button>
+<button (click)="loadMoreCourses()" id="load-courses" class="vc-courses-list__more-button" type="button">Load more</button>
