--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -14,6 +14,7 @@ $vc-soft-blue: #577ce6;
 $vc-cloudy-blue: #b9bdce;
 $vc-red: #ff4e33;
 $vc-shadow: rgba(18, 21, 35, 0.08);
+$vc-pink: rgb(255, 241, 248, 0.5);
 
 // Fonts
 $vc-ff-source-sans: 'SourceSansPro';
