--- a/src/app/pages/courses-page/courses-list/courses-list.component.scss
+++ b/src/app/pages/courses-page/courses-list/courses-list.component.scss
@@ -17,4 +17,16 @@
             text-decoration: underline;
         }
     }
+
+    &__message {
+        height: 40px;
+        border-radius: 6px;
+        border: 1px solid $vc-blue;
+        color: $vc-blue;
+        text-transform: uppercase;
+        font-size: 16px;
+        width: 100%;
+        text-align: center;
+        padding: 5px;
+    }
 }
