--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -5,6 +5,7 @@ $vc-black: #000000;
 $vc-grey: #f2f3f7;
 $vc-light-grey: #d9dbe3;
 $vc-dark-grey: #2c2f3c;
+$vc-stale-grey: #525462;
 $vc-dark-blue: #414452;
 $vc-silver: #c0c3ce;
 $vc-dark-silver: #868996;
