--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="vc-wrapper">
     <vc-header></vc-header>
+    <vc-breadcrumb></vc-breadcrumb>
     <main class="vc-main">
         <router-outlet></router-outlet>
     </main>
