--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,3 +1,3 @@
 <footer class="vc-footer">
-    <span class="vc-footer__text">@ Copyright rules</span>
+    <span class="vc-footer__text">Copyright © VideoCourses. All rights reserved </span>
 </footer>
