--- a/src/app/pages/course-item-page/date-input/date-input.component.html
+++ b/src/app/pages/course-item-page/date-input/date-input.component.html
@@ -1,4 +1,11 @@
 <div class="vc-date">
     <label for="courseDate" class="vc-label">Date:</label>
-    <input id="courseDate" class="vc-input vc-date__input" type="date" placeholder="date">
+    <input
+        id="courseDate"
+        class="vc-input vc-date__input"
+        type="date"
+        placeholder="date"
+        [ngModel]="dateCreation | date:'yyyy-MM-dd'"
+        (ngModelChange)="dateCreation = $event"
+        (blur)="onBlur()">
 </div>
