--- a/src/app/pages/courses-page/add-course/add-course.component.html
+++ b/src/app/pages/courses-page/add-course/add-course.component.html
@@ -1,3 +1,3 @@
 <div class="vc-add-course">
-    <a [routerLink]="['/new']" class="vc-add-course__button" type="button">Add course</a>
+    <a [routerLink]="['/courses/new']" class="vc-add-course__button" type="button">Add course</a>
 </div>
