--- a/src/app/pages/courses-page/search/search.component.html
+++ b/src/app/pages/courses-page/search/search.component.html
@@ -6,6 +6,7 @@
             class="vc-search__input"
             type="text"
             placeholder="Text to search"
+            minlength="3"
             [(ngModel)]="searchValue">
     </div>
     <button (click)="searchCourse()" class="vc-search__button" type="button">Search</button>
