--- a/src/app/pages/courses-page/search/search.component.html
+++ b/src/app/pages/courses-page/search/search.component.html
@@ -6,8 +6,6 @@
             class="vc-search__input"
             type="text"
             placeholder="Text to search"
-            minlength="3"
-            [(ngModel)]="searchValue">
+            (keyup)="onKeyUp($event.target.value)">
     </div>
-    <button (click)="searchCourse()" class="vc-search__button" type="button">Search</button>
 </div>
